# api-based-mvp

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  pyproject.toml  requirements.txt  test.json  test.py  test.txt
app/: 3_🏠_Home.py  audio_utils.py
app/pages/: 1_📝_Submit.py  2_📈_Results.py
configs/: base.config
data/: questions.csv  questions.txt  sonix_output.json  sonix_output.txt  test.csv  test_answers.csv  test_dump.json  test_output.csv  test_output.json  test_output_3.5.csv  test_output_3.5.json  test_output_4.json  test_transcription.json
scripts/: run_pipeline.py
src/: config.py  consts.py  main.py  pipeline.py
src/speech-recognition/: base.py  sonix.py
src/speech_recognition/: base.py  insanely_whisper.py  sonix.py
src/text_analysis/: base.py  consts.py  openai.py  openai_analyzer.py
